# libmongocrypt

./: .gitignore  .lsan-suppressions  CMakeLists.txt  README.md  configure.sh
.evergreen/: build.sh  build_all.sh  compile_cs.sh  config.yml  linker-tests.sh  pkgconfig-tests.sh  setup-venv.sh  test.sh
.evergreen/linker_tests_deps/app/: CMakeLists.txt  app.c
cmake/: libmongocrypt-symbols.map  libmongocrypt-symbols.txt
etc/: crypto.py  crypto_test.py  dump_payload4.py  fle2_crypto.py  fle2_generate_tests.py  payload7.py  payload7_test.py  payload_dump.py
integration-test/: README.md  go.sum  run.sh
kms-message/: CMakeLists.txt
src/: mc-efc-private.h  mc-efc.c  mc-fle-blob-subtype-private.h  mc-fle2-encryption-placeholder.c  mc-fle2-find-equality-payload-v2.c  mc-fle2-find-equality-payload.c  mc-fle2-insert-update-payload-v2.c  mc-fle2-insert-update-payload.c  mc-fle2-payloads-private.h  mc-fle2-payloads.c  mongocrypt-binary.c  mongocrypt-buffer-private.h  mongocrypt-buffer.c  mongocrypt-cache-private.h  mongocrypt-cache.c  mongocrypt-crypto-private.h  mongocrypt-crypto.c  mongocrypt-ctx-compact.c  mongocrypt-ctx-datakey.c  mongocrypt-ctx-decrypt.c  mongocrypt-ctx-encrypt.c  mongocrypt-ctx-private.h  mongocrypt-ctx-rewrap.c  mongocrypt-ctx.c  mongocrypt-kek-private.h  mongocrypt-kek.c  mongocrypt-key-broker-private.h  mongocrypt-key-broker.c  mongocrypt-key-private.h  mongocrypt-key.c  mongocrypt-kms-ctx-private.h  mongocrypt-kms-ctx.c  mongocrypt-marking.c  mongocrypt-opts-private.h  mongocrypt-opts.c  mongocrypt-private.h  mongocrypt-traverse-util-private.h  (+6 more)
(+86 files in other folders)
