cmake_minimum_required (VERSION 3.5)
project (app C)
add_executable (app app.c)
find_package (bson-1.0 1.11 QUIET)
if (bson-1.0_FOUND)
   message ("--   libbson found version \"${bson-1.0_VERSION}\"")
   target_link_libraries (app PRIVATE mongo::bson_static)
else ()
   # Try old package name for libbson.
   find_package(libbson-static-1.0 1.11 REQUIRED)
   message ("--   libbson-static found version \"${BSON_STATIC_VERSION}\"")
   message ("--   libbson-static include path \"${BSON_STATIC_INCLUDE_DIRS}\"")
   message ("--   libbson-static libraries \"${BSON_STATIC_LIBRARIES}\"")
   target_include_directories (app PRIVATE ${BSON_STATIC_INCLUDE_DIRS})
   target_compile_definitions (app PRIVATE ${BSON_STATIC_DEFINITIONS})
   target_link_libraries (app PRIVATE ${BSON_STATIC_LIBRARIES})
endif ()

find_package (mongocrypt REQUIRED)
target_link_libraries (app PRIVATE mongo::mongocrypt)